# stb-cmake-package

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
src/: stb_image.c  stb_rect_pack.c  stb_truetype.c
